feat(api): add provenance to the ToxTemp JSON
